# Daffem2022

./: CMakeLists.txt  Embedded.data  Icing.data  dom.data  dom.mesh
src/: #Main.f90#  Affichage_M.f90  Algebra.f90  Algebra2.f90  Data.f90  ExactFunctionJump.f90  ExactFunctionJumpt.f90  ExactSolution.f90  ExactSolutiont.f90  Hash.f90  IcingTest_mod.f90  Initialisation.f90  Interpolation.f90  IterativeProcess.f90  L2Norm.f90  LHS_RHS_SchemeSelection.f90  Locate.f90  Main.f90  PolyReconstruction.f90  PublicVar.f90  ReadMesh.f90  SVD_Mod.f90  SourceTerm.f90  Tools.f90  Tools2D.f90  Tools3D.f90  Types.f90  Velocity.f90  WriteSol.f90
src/Embedded/: BoxDistance.f90  CircleDistance.f90  ComputeNormalsAndTangents.f90  Distance.f90  EmbeddedVariableInitialization.f90  SphereDistance.f90
src/GradientReconstruction/: GradientReconstruction.f90
src/PrePostProcess/: #PreProcess.f90#  PreProcess.f90
src/Schemes/: BCSelection.f90  Compute_CG.f90  Compute_CG_Explicit.f90  Compute_CG_Primal.f90  Compute_DG.f90  Compute_DG_Primal.f90  Compute_MSEG.f90  ImmersedElementIntegral.f90  Permeability.f90  Quadrature.f90  TransferOperator_MSEG.f90
src/Schemes/EdgeIntegral/: EdgeIntegral_CG_Icing.f90  EdgeIntegral_CG_Icing_Explicit.f90  EdgeIntegral_DG.f90  (+2 more)
src/SparseMatrix/: SparseMatrix_CG.f90  SparseMatrix_DG.f90  SparseMatrix_MS.f90
src/SystemResolution/: FluxReconstruction.f90  FluxReconstructionLHSRHS.f90  GMRES.f90  GMRES_Interface.f90  MUMPS_Interface.f90  Newton.f90  PostProcess.f90  SystemResolution.f90
test_001/: another.mesh~  smaller2_00002.geo  smaller2_00004.mesh
(+31 files in other folders)
